<resources>
    <string name="app_name">Weather</string>
    <string name="overall_weather_label">Погода</string>

    <string name="location_snackbar_rationale">Необходим доступ к службам геолокации</string>
    <string name="ok">OK</string>
    <string name="approved_permission">Разрешение одобрено</string>
    <string name="denied_permission">Разрешение отклонено.
        Для использования приложения разрешите использование служб геолокации</string>
    <string name="settings">Настройки</string>
    <!-- Current weather conditions layout strings -->
    <string name="current_weather_conditions_description">Current weather conditions</string>
    <string name="current_weather_temperature_text">16</string>
    <string name="current_weather_city_text">Moscow</string>
    <!-- Daily weather conditions layout strings -->
    <string name="daily_weather_day_text">Sunday</string>
    <string name="daily_weather_conditions_description">Daily weather conditions</string>
    <string name="daily_weather_temperature_text">20</string>
    <!-- Daily weather conditions layout strings -->
    <string name="hourly_weather_time_text">Sunday</string>
    <string name="hourly_weather_conditions_description">Current weather conditions</string>
    <string name="hourly_weather_temperature_text">20</string>

    <!-- Day of the week strings-->
    <string name="sunday">Воскресенье</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>

    <!-- Error strings -->
    <string name="location_error">Служба геолокации недоступна</string>
    <string name="network_error">Соединение недоступно</string>

    <!-- Detail fragment key strings -->
    <string name="max_temp_key">Макс. температура, \u2103:</string>
    <string name="min_temp_key">Мин. температура, \u2103:</string>
    <string name="sunrise_key">Восход:</string>
    <string name="sunset_key">Закат:</string>
    <string name="humidity_key">Влажность, %:</string>
    <string name="wind_speed_key">Скорость ветра, м/с:</string>
    <string name="daily_weather_details_label">Подробно:</string>
    <!-- Details fragment tools text -->
    <string name="details_description">Few clouds</string>
    <string name="humidity_value">96</string>
    <string name="wind_speed_value">7</string>
    <string name="sunrise_value">5:46</string>
    <string name="sunset_value">19:54</string>
    <string name="max_temp_value">19</string>
    <string name="min_temp_value">12</string>

    <!--Menu strings-->
    <string name="update">Обновить</string>
</resources>