<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dailyWeather"
            type="com.example.weather.weather_models.DailyWeather" />
        <variable
            name="clickListener"
            type="com.example.weather.adapters.DailyWeatherClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/daily_weather_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:onClick="@{() -> clickListener.onDailyWeatherClick(dailyWeather)}">

        <ImageView
            android:id="@+id/daily_weather_conditions"
            android:layout_width="@dimen/image_width_normal"
            android:layout_height="@dimen/image_height_normal"
            android:contentDescription="@string/daily_weather_conditions_description"
            app:bindDailyWeatherDescriptionIcon="@{dailyWeather}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_baseline_wb_sunny_24" />

        <TextView
            android:id="@+id/daily_weather_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:textSize="@dimen/text_normal"
            app:bindDailyDay="@{dailyWeather}"
            app:layout_constraintBottom_toBottomOf="@+id/daily_weather_conditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/daily_weather_conditions"
            tools:text="@string/daily_weather_day_text" />

        <TextView
            android:id="@+id/daily_weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_normal"
            app:bindDailyTemperature="@{dailyWeather}"
            app:layout_constraintBottom_toBottomOf="@+id/daily_weather_conditions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/daily_weather_conditions"
            app:layout_constraintTop_toTopOf="@+id/daily_weather_conditions"
            tools:text="@string/daily_weather_temperature_text" />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="@dimen/image_width_normal"
            android:layout_height="@dimen/image_height_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            app:srcCompat="@drawable/ic_baseline_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_baseline_arrow_right_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>